--- a/package.json
+++ b/package.json
@@ -1,27 +1,17 @@
 {
   "name": "waterbill-api",
   "version": "1.0.0",
-  "description": "Automatic water bill OCR extraction API using Node.js, Sharp, and Tesseract.js",
-  "main": "extractWaterBillsAPI.js",
   "type": "module",
+  "main": "extractWaterBillsAPI.js",
   "scripts": {
-    "start": "node extractWaterBillsAPI.js",
-    "dev": "nodemon extractWaterBillsAPI.js"
+    "start": "node extractWaterBillsAPI.js"
   },
   "dependencies": {
-    "cors": "^2.8.5",
-    "dotenv": "^16.4.5",
     "express": "^4.19.2",
-    "multer": "^1.4.5-lts.1",
-    "path": "^0.12.7",
-    "pdfjs-dist": "^3.11.174",
-    "sharp": "^0.33.4",
-    "tesseract.js": "^5.0.5"
-  },
-  "devDependencies": {
-    "nodemon": "^3.1.3"
-  },
-  "engines": {
-    "node": ">=18.0.0"
+    "multer": "^1.4.5",
+    "cors": "^2.8.5",
+    "sharp": "^0.33.2",
+    "tesseract.js": "^5.1.0",
+    "pdfjs-dist": "^3.9.179"
   }
 }
