--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "dependencies": {
     "express": "^4.19.2",
-    "multer": "^1.4.5",
+    "multer": "^1.4.5-lts.1",
     "cors": "^2.8.5",
     "sharp": "^0.33.2",
     "tesseract.js": "^5.1.0",
